unpackaged/main/default/objects/Fiber_Terminal__c/Fiber_Terminal__c.object-meta.xml
<CustomObject>
    <label>Fiber Terminal</label>
    <nameField>
        <displayFormat>FT-{00000000}</displayFormat>
        <label>Fiber Terminal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fiber Terminals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>