unpackaged/main/default/objects/Fiber_Terminal__c/fields/Building_Serve_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Serve_Type__c</fullName>
    <description>Building Served (Internally or Externally) on for On-Net Locations  only</description>
    <inlineHelpText>Building Served (Internally or Externally) on for On-Net Locations  only</inlineHelpText>
    <label>Building Serve Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>