unpackaged/main/default/objects/Fiber_Terminal__c/fields/Business_Count__c.field-meta.xml
<CustomField>
    <fullName>Business_Count__c</fullName>
    <label>Business Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>