unpackaged/main/default/objects/Fiber_Terminal__c/fields/CPL__c.field-meta.xml
<CustomField>
    <fullName>CPL__c</fullName>
    <externalId>true</externalId>
    <label>CPL</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>