unpackaged/main/default/objects/Fiber_Terminal__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>