unpackaged/main/default/objects/Fiber_Terminal__c/fields/Fiber_Status__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Status__c</fullName>
    <label>Fiber Status</label>
    <length>16</length>
    <type>Text</type>
</CustomField>