unpackaged/main/default/objects/Fiber_Terminal__c/fields/Floor_Count__c.field-meta.xml
<CustomField>
    <fullName>Floor_Count__c</fullName>
    <label>Floor Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>