unpackaged/main/default/objects/Fiber_Terminal__c/fields/Occupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Type__c</fullName>
    <label>Occupancy Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>