unpackaged/main/default/objects/Fiber_Terminal__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>4</length>
    <type>Text</type>
</CustomField>