unpackaged/main/default/objects/Fiber_Terminal__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <defaultValue>"AT&amp;T"</defaultValue>
    <label>Service Provider</label>
    <length>16</length>
    <type>Text</type>
</CustomField>