unpackaged/main/default/objects/Fiber_Terminal__c/fields/Serving_Wire_Center_CLLI__c.field-meta.xml
<CustomField>
    <fullName>Serving_Wire_Center_CLLI__c</fullName>
    <label>Serving Wire Center CLLI</label>
    <length>16</length>
    <type>Text</type>
</CustomField>