unpackaged/main/default/objects/Fiber_Terminal__c/fields/Spatial_Key__c.field-meta.xml
<CustomField>
    <fullName>Spatial_Key__c</fullName>
    <label>Spatial Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>