unpackaged/main/default/objects/Fiber_Terminal__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <label>Street Address</label>
    <length>128</length>
    <type>Text</type>
</CustomField>