unpackaged/main/default/objects/Fiber_Terminal__c/fields/Total_BCL__c.field-meta.xml
<CustomField>
    <fullName>Total_BCL__c</fullName>
    <label>Total BCL</label>
    <length>8</length>
    <type>Text</type>
</CustomField>