unpackaged/main/default/objects/Fiber_Terminal__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>16</length>
    <type>Text</type>
</CustomField>